tidy up of control styles and markup, addition of className toggle onto control elements to give correct styles, update TODO

--- a/frontend/app/views/fragments/footer.scala.html
+++ b/frontend/app/views/fragments/footer.scala.html
@@ -8,13 +8,13 @@
                     <span class="u-h">@Config.siteTitle</span>
                     <i class="icon-membership_beta_mobile"></i>
                 </a>
-                <a class="brand-bar__item brand-bar__item--action" data-link-name="back to top" href="#top">
+                <a class="brand-bar__item brand-bar__item--action no-underline" data-link-name="back to top" href="#top">
                     <span class="control">
                         <span class="control__icon">
                             <i class="i icon-arrow-up-black"></i>
                         </span>
                     </span>
-                    <span class="control__info case--lower">Back to top</span>
+                    <span class="control__info case--lower no-underline--override">Back to top</span>
                 </a>
             </div>
         </div>
