--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -12,13 +12,13 @@
                 <nav>
                     <ul class="inline-list u-cf" role="menubar">
                         <li class="menu-item">
-                            <a href="@Config.idWebAppSigninUrl("")" role="menuitem" class="no-underline icon-wrapper js-identity-icon control__user-account" title="Your account">
-                                <span class="control">
+                            <a href="@Config.idWebAppSigninUrl("")" role="menuitem" class="no-underline icon-wrapper js-identity-icon control-container" title="Your account">
+                                <span class="control js-user-icon">
                                     <span class="control__icon">
                                         <i class="icon-user-black"></i>
                                     </span>
                                 </span>
-                                <span class="hidden-mobile">
+                                <span class="hidden-mobile js-user-detail">
                                     <span class="identity__notice control__info">Sign in</span>
                                     <span class="identity__account control__info u-h no-underline--override js-user-displayname"></span>
                                     <span class="identity__tier control__info u-h no-underline--override case--capitalize js-user-tier"></span>
@@ -26,7 +26,7 @@
                             </a>
                         </li>
                         <li class="menu-item menu-item--last is-hidden js-header-join-us-cta">
-                            <a href="/join" role="menuitem" class="no-underline hidden-mobile control__join-us" title="Join us">
+                            <a href="/join" role="menuitem" class="no-underline hidden-mobile control-container" title="Join us">
                                 <span class="control control--no-border"><i class="icon-g-black"></i></span>
                                 <span class="control__info no-underline--override hidden-mobile">Join us</span>
                             </a>
