--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -46,6 +46,7 @@
 @import 'layout/headings';
 @import 'layout/side-margins';
 @import 'layout/homeslice';
+@import 'components/signpost';
 
 /* ==========================================================================
    Icons
@@ -79,6 +80,7 @@
 @import 'components/patterns';
 @import 'components/signpost';
 @import 'components/flash-message';
+@import 'components/help';
 
 /* ==========================================================================
    Membership pages
@@ -92,7 +94,6 @@
 @import 'pages/tickets';
 @import 'pages/login';
 @import 'pages/about';
-@import 'pages/help';
 @import 'pages/feedback';
 @import 'pages/home'; // Home A-B test styles
 
