Updates based on feedback from UX David

--- a/frontend/app/views/fragments/benefits/item.scala.html
+++ b/frontend/app/views/fragments/benefits/item.scala.html
@@ -2,7 +2,7 @@
 
 <div class="benefit @if(isFeatured == true){benefit--featured}">
     <div class="benefit__icon">
-        <i class="icon @if(isFeatured == true){icon--large} icon-@benefit.identifier"></i>
+        <i class="icon @if(isFeatured == true){icon--featured} icon-@benefit.identifier"></i>
     </div>
     <div class="benefit__details">
         <div class="benefit__title">
