--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -22,7 +22,7 @@
     <div class="page-slice page-slice--tint">
         <div class="page-slice__inner">
             <h2 class="page-slice__headline">What's included</h2>
-            <div class="page-slice-content">
+            <div class="page-slice-content page-slice-content--padded">
                 @fragments.tier.feature(tier=Tier.Friend, subtitle="Benefits") {
                     <a class="action js-opt-become-member" href="/join/friend/enter-details">
                         Become a Friend
