--- a/frontend/assets/stylesheets/components/_icons.scss
+++ b/frontend/assets/stylesheets/components/_icons.scss
@@ -1,3 +1,7 @@
+/* ==========================================================================
+   Icons
+   ========================================================================== */
+
 .icon-wrapper {
     display: block;
 }
@@ -21,10 +25,12 @@
 }
 
 .icon--featured {
-    width: 25px; height: 25px;
+    width: 25px;
+    height: 25px;
     background-size: 25px;
     @include mq(tablet) {
-        width: 48px; height: 48px;
+        width: 48px;
+        height: 48px;
         background-size: 48px;
     }
 }
