--- a/frontend/assets/stylesheets/components/_pricing.scss
+++ b/frontend/assets/stylesheets/components/_pricing.scss
@@ -14,21 +14,13 @@
     height: 100%;
 }
 .price-info__item--split {
-    padding-right: rem(10px);
+    padding-right: rem($gs-gutter/2);
     border-right: 1px solid $black-trans;
-
-    @include mq(mobileLandscape) {
-        padding-right: 1.5rem;
-    }
 }
 .price-info__item--last {
     padding-right: 0;
-    padding-left: rem(10px);
+    padding-left: rem($gs-gutter/2);
     border-right: 0 none;
-
-    @include mq(tablet) {
-        padding-left: 1.5rem;
-    }
 }
 .price-info__detail {
     @include fs-headline(2);
@@ -49,7 +41,7 @@
     text-align: left;
 
     @include mq(tablet) {
-        margin-top: rem(-6px);
+        margin-top: -(rem($gs-baseline/2));
     }
 }
 
