Add arrow icon for FAQs

--- a/frontend/app/views/fragments/faq/questions.scala.html
+++ b/frontend/app/views/fragments/faq/questions.scala.html
@@ -6,7 +6,7 @@
         <a class="help-question" href="#@faq.id">
             <span class="control control--faq">
                 <span class="control__icon">
-                    <i class="i icon-arrow-up-black icon--faq"></i>
+                    <i class="i icon-arrow-down icon--faq"></i>
                 </span>
             </span>
             <span class="help-question__text">@faq.question</span>
