--- a/frontend/assets/stylesheets/components/_icons.scss
+++ b/frontend/assets/stylesheets/components/_icons.scss
@@ -3,9 +3,8 @@
 }
 
 .icon--faq {
-    background-size: rem($gs-baseline * 1.5) rem($gs-baseline * 1.5);
-    width: rem($gs-baseline * 1.5);
-    height: rem($gs-baseline * 1.5);
+    background-size: 18px;
+    width: 18px; height: 18px;
 }
 
 .icon--benefits {
