added copy class and removed asside-pull class

--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -15,7 +15,7 @@
                 @fragments.faq.answers(Faq.help)
             </div>
             <div class="page-section__supplementary">
-                <aside class="aside aside--pull" role="complementary">
+                <aside class="aside copy" role="complementary">
                     <p>If your question is not answered here then please <a href="mailto:@Config.membershipSupport" class="u-underline">get in touch</a>.</p>
                 </aside>
             </div>
