added body color

--- a/frontend/assets/stylesheets/components/_help.scss
+++ b/frontend/assets/stylesheets/components/_help.scss
@@ -23,6 +23,7 @@
 .help-question__text {
     padding-left: rem($gs-gutter + $gs-baseline);
     display: inline-block;
+    color: $c-body;
 }
 
 .help-faqs {
