removed underline on hover as we are using border here

--- a/frontend/assets/stylesheets/base/_type.scss
+++ b/frontend/assets/stylesheets/base/_type.scss
@@ -81,6 +81,7 @@ blockquote {
 
         &:hover,
         &:focus {
+            text-decoration: none;
             border-color: $c-neutral2;
         }
     }
