changed to $until to stop warnings

--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -122,7 +122,7 @@
         border-color: $white;
     }
 
-    @include mq($to: tablet) {
+    @include mq($until: tablet) {
         margin-top: rem($gs-baseline);
         margin-bottom: 0;
     }
