enable font smoothing

--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -12,6 +12,8 @@
     width: 100%;
     max-width: rem($gs-gutter * 15);
     padding: rem(8px) rem(8px) rem(8px) rem(18px);
+    -moz-osx-font-smoothing: antialiased;
+    -webkit-font-smoothing: antialiased;
     @include border-radius(50%);
 
     &:visited,
