added role to main element

--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -3,7 +3,7 @@
 
 @main("Help", containerPadding=false) {
 
-    <main class="page-container__inner">
+    <main class="page-container__inner" role="main">
         <section class="page-header">
             <h1 class="page-headline">FAQ</h1>
             <p class="page-intro">Common questions about Guardian Membership</p>
