--- a/frontend/app/views/joiner/staff.scala.html
+++ b/frontend/app/views/joiner/staff.scala.html
@@ -25,7 +25,7 @@
 
 @main("Staff Membership", containerPadding=false) {
 
-    <main class="page-container__inner">
+    <main class="page-container__inner" role="main">
         @fragments.notifications.flashMessage(error)
 
         <section class="page-header">
